--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+@import "punchin.css";
 body {
     background-color: #f8f8f8;
 }
